add user box style and randome color for each user

--- a/src/components/Chat/ChatLayout.module.scss
+++ b/src/components/Chat/ChatLayout.module.scss
@@ -1,7 +1,8 @@
+@import "../../scss/utils/config";
 .layoutContainer{
     margin: 30px auto;
     width: 750px;
-    background: #444753;
+    background: $dark-gray;
     border-radius: 5px;
   display: flex;
  }
