--- a/src/scss/utils/_config.scss
+++ b/src/scss/utils/_config.scss
@@ -7,12 +7,26 @@ $asset_dir: "../src/assets/";
 // Colors
 
 $light-green: #33ffbb;
-$green: #86BB71;
+$green: #33ffbb;
 $blue: #94C2ED;
 $orange: #E38968;
-$gray: #92959E;
+$dark-gray: #444753;
+$light-gray: #979797;
 $white: #fff;
-
+$gray: #CBCDD3;
+$dark: #777777;
+$error: #EF8D9C;
+$orange: #FFC39E;
+$success: #b5ffdd;
+$secondary: #84dcc6;
+$pink: #ffca84;
+$grape: #ff9f1c;
+//sor
+$ruddy: #b09ccb;
+$cadmium: #5e548e;
+//blue
+$picton: #c5fffd;
+$cerulean: #88d9e6;
 
 .alignRight {
   text-align: right;
