--- a/src/components/Users/UsersBoxItem.module.scss
+++ b/src/components/Users/UsersBoxItem.module.scss
@@ -31,28 +31,16 @@ button, .dot {
 }
 
 .box {
-  width: 35%;
+  width: 27%;
   height: 100%;
   border-radius: 20px;
   box-shadow: 4px 3px 33px -25px rgba($gray, 10%);
   background: linear-gradient(to bottom right, $ruddy 40%, $cadmium 100%);
   perspective: 40px;
-  min-height: 250px;
+  min-height: 187px;
   margin-bottom: 4rem;
-  &.green{
-    background: linear-gradient(to bottom right, $success 40%, $secondary 100%);
-  }
-  &.picton{
-    background: linear-gradient(to bottom right, $picton 40%, $cerulean 100%);
-  }
   &.orange{
     background: linear-gradient(to bottom right, $error 40%, $orange 100%);
-  }
-  &.purple{
-    background: linear-gradient(to bottom right, $pink 40%, $grape 100%);
-  }
-  &.red{
-    background: linear-gradient(to bottom right, $ruddy 40%, $cadmium 100%);
   }
   h1 {
     font-size: 0.9em;
@@ -141,12 +129,14 @@ button, .dot {
   width: 50%;
   height: 15%;
   border-radius: 20px;
+  color: $dark-gray;
   top: 73%;
   left: 25%;
   outline: 0;
   border: none;
   box-shadow: 2px 2px 10px rgba($dark, .5);
   transition: all .5s ease-in-out;
+
   &:hover {
     background: darken($white, 5%);
     transform: scale(1.05);
